Fix bottom divider visibility

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -262,17 +262,16 @@ body {
 }
 
 .profile-divider {
-  width: 100%;
-  border-top: 1px dashed #d6d6d6;
-  margin-top: 16px;
+  border-bottom: 1px dashed #d9d9d9;
+  margin-top: 18px;
 }
 
 .profile-bottom-divider {
-  border-top: 1px dashed #d6d6d6;
   position: absolute;
-  bottom: 0;
+  bottom: 24px;
   left: 0;
   right: 0;
+  border-bottom: 1px dashed #d9d9d9;
 }
 
 .btn-disabled {
